Fix excess whitespace below UX projects

--- a/public/stylesheets/project.css
+++ b/public/stylesheets/project.css
@@ -425,3 +425,16 @@ a {
 .images img {
 	margin-bottom: 25px;
 }
+
+#lastGradient {
+	position: absolute;
+    top: 4200px;
+    bottom: 0;
+    width: 100%;
+    background: url(/gradient2.svg) no-repeat;
+    min-height: 1050px;
+    display: block;
+    content: "foo";
+    background-size: cover;
+    padding-bottom: 100px;
+}
